2009-07-21  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by David Levin.

        We can't match implementation file and primary header exactly
        since we have so many files in WebKit where the port suffix
        is appended to the filename.

        Example: FooQt.cpp and the primary header is Foo.h.

        * Scripts/modules/cpplint.py:

2009-07-21  Jakob Petsovits  <jakob.petsovits@torchmobile.com>

        Reviewed by David Levin.

        Add checks for switch statement indentation to cpplint.
        https://bugs.webkit.org/show_bug.cgi?id=27508

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-21  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Adam Treat.

        Feature request: cpplint should check for braces - rule 2
        https://bugs.webkit.org/show_bug.cgi?id=27497

        Add the requested feature: Make sure { is on the same line
        as the foreach "keyword".

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-20  Jakob Petsovits  <jakob.petsovits@torchmobile.com>

        Reviewed by David Levin.

        Add checks for namespace indentation to cpplint.
        https://bugs.webkit.org/show_bug.cgi?id=27461

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-20  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by David Levin.

        Add cpplint check for proper include order
        https://bugs.webkit.org/show_bug.cgi?id=27462

        Add a new check to cpplint to flag cases where the include section of a file
        does not match the mandated include order and style of the Webkit coding style
        guidelines.

        Add associated tests.

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-21  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Levin.

        Support lint for patches