@@ -1,3 +1,13 @@
+2009-07-21  Jakob Petsovits  <jakob.petsovits@torchmobile.com>
+
+        Reviewed by David Levin.
+
+        Add checks for multi-line boolean operator placement.
+        https://bugs.webkit.org/show_bug.cgi?id=27496
+
+        * Scripts/modules/cpplint.py:
+        * Scripts/modules/cpplint_unittest.py:
+
 2009-07-21  Adam Treat  <adam.treat@torchmobile.com>
 
         Reviewed by David Levin.
